# docs/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /api/v1
 definitions:
+  models.ApproveShopReq:
+    properties:
+      shop_id:
+        type: integer
+      userId:
+        type: integer
+    type: object
   models.ChangePassword:
     properties:
       new_password:
@@ -70,6 +77,45 @@ info:
   title: EzyMark Fiber API
   version: "1.0"
 paths:
+  /admin/shop/approve:
+    patch:
+      consumes:
+      - application/json
+      description: Allows an admin to approve a shop by providing the shop ID.
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/models.ApproveShopReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Approve a shop
+      tags:
+      - ShopAdmin Management
   /auth/logout:
     post:
       consumes:
